--- a/classic_rag.ipynb
+++ b/classic_rag.ipynb
@@ -812,8 +812,15 @@
     "https://qdrant.tech/documentation/embeddings/cohere/\n",
     "\n",
     "https://qdrant.tech/articles/qa-with-cohere-and-qdrant/\n",
+    "\n",
+    "https://medium.com/@sanket.ai/building-a-streamlit-application-for-interactive-questioning-with-pdf-using-openai-and-langchain-dc82a0d8d68a\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
